codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_chatgpt_plan_without_email.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────╮
│  >_ Telethryve (v0.144.0)                                                │
│     Powered by Codex                                                     │
│                                                                          │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date            │
│ information on rate limits and credits                                   │
│                                                                          │
│  Model:         gpt-5.1-codex-max (reasoning none, summaries auto)       │
│  Directory: [[workspace]]                                                │
│  Permissions:   Custom (workspace with network access, Ask for approval) │
│  Agents.md:     <none>                                                   │
│  Account:       Enterprise                                               │
│                                                                          │
│  Limits:        data not available yet                                   │
╰──────────────────────────────────────────────────────────────────────────╯
